[package]
name = "system-mqtt"
authors = ["James Carl", "Wiktor Sikora"]
version = "0.3.2"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Broadcasts system statistics to an mqtt server of your choice. Ideal for home assistant!"
repository = "https://github.com/wiktorsikora/system-mqtt"

[dependencies]
argh = "0.1"
battery = "0.7"
sysinfo = "0.35.0"
keyring = "3.6.2"
log = "0.4"
systemd-journal-logger = "2.2.2"
rumqttc = { version = "0.24.0", features = ["use-rustls", "url"] }
rpassword = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1.0.69"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7"}
url = { version = "2.2", features = ["serde"] }
simple_logger = "5.0.0"
lm-sensors = "0.3.2"
futures-util = "0.3.31"

[package.metadata.deb]
systemd-units = { unit-name = "system-mqtt", unit-scripts = "systemd", enable = true }
depends = ["lm-sensors"]
